# padelleague

./: .env.dev  .env.prod  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: deploy.yaml
.github/workflows/: deploy-frontend.yaml  deploy.yaml
helpers/: db_to_postgres.ipynb  interact_with_db.ipynb
helpers/chatbot/: agents_improvement.ipynb  agents_initial_experiment.ipynb  evalset.ipynb  example_set.json  experiments.ipynb  padel_league_backup.dump  queries.json  schema.txt  sql_agent_prompt.txt
migrations/versions/: 0beb5529dcd5_baseline_matches_prod.py  448180d729d8_images_add_object_key_content_type.py  4e1e938e6510_backend_apps_add__image_id_and_backfill.py  63c524cb947d_images_add__image_id_backfill.py  6dcd520eb654_baseline_prod_schema.py  737ed839a327_normalize_division_image_paths_to_.py  9b4588f1992a_divisions_start_gcs_image_id_system.py  a1e2b3c4d5f6_news_updated_cover_path.py  aef31198266a_baseline.py  b4bb8fdef380_add_shuffle_position.py  cc9319961067_images__image_id_backfill.py  d44383bea9b4_backfill_images_link_division_fks.py  e1b22811c87e_add_shuffle_info.py  e7798ea8ed94_baseline.py  fb3ca462fc52_add_super_admin.py
padel_league/: __init__.py  auth.py  cli.py  config.py  context.py  database.db-journal  model.py  sql_db.py
padel_league/core/: agents.py  llm_handler.py  services.py
padel_league/models/: Association_OrderOrderLine.py  Association_PlayerDivision.py  Association_PlayerMatch.py  Association_PlayerShuffleMatch.py  Association_PlayerShuffleTournament.py  Association_ProductProductAttribute.py  Association_ProductProductAttributeValue.py  __init__.py  backend_apps.py  divisions.py  editions.py  leagues.py  matches.py  news.py  newsletters.py  order_lines.py  orders.py  players.py  product_attribute_values.py  product_attributes.py  product_images.py  products.py  registrations.py  shuffle_matches.py  shuffle_tournaments.py  sponsor.py  sponsor_clicks.py  sponsors.py  users.py  videos.py
padel_league/modules/: __init__.py  api.py  auth.py  chatbot_api.py  editions.py  editor.py  main.py  matches.py  news.py  players.py  products.py  products_attributes.py  registrations.py  shop.py  sponsors.py  startup.py  tournaments.py  uploads.py  users.py
padel_league/static/data/: divisions.csv  editions.csv  leagues.csv  matches.csv  players.csv  players_divisions.csv  players_matches.csv
padel_league/static/js/: calendar.js  chat.js  inputs.js  kanban.js  main.js  modal.js  (+11 more)
padel_league/templates/: calendar.html  chatbot.html  index.html  layout.html  modal_layout.html  statues.html
padel_league/tests/: conftest.py  test_auth.py  test_db.py  test_factory.py  test_input_tools.py
padel_league/tools/: __init__.py  auth_tools.py  email_tools.py  games_order.json  image_tools.py  input_tools.py  sql_tools.py  tools.py
scripts/: backup.sh
terraform/: main.tf  variables.tf
(+89 files in other folders)
